# NP-Team_Task3-OpenAPI

./: README.md  pyproject.toml
app/: config.py  main.py
app/api/v1/googleSheets/: endpoints.py
app/service/store/: __init__.py  google_sheets.py  store.py
config/: debug.env  setup.cfg
